; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_float.c_asind_q1.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_float.c_asind_q1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@asin_0_5 = common dso_local global double 0.000000e+00, align 8
@acos_0_5 = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @asind_q1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @asind_q1(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store double %0, double* %3, align 8
  %6 = load double, double* %3, align 8
  %7 = fcmp ole double %6, 5.000000e-01
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load double, double* %3, align 8
  %10 = call double @asin(double %9) #2
  store volatile double %10, double* %4, align 8
  %11 = load volatile double, double* %4, align 8
  %12 = load volatile double, double* @asin_0_5, align 8
  %13 = fdiv double %11, %12
  %14 = fmul double %13, 3.000000e+01
  store double %14, double* %2, align 8
  br label %23

15:                                               ; preds = %1
  %16 = load double, double* %3, align 8
  %17 = call double @acos(double %16) #2
  store volatile double %17, double* %5, align 8
  %18 = load volatile double, double* %5, align 8
  %19 = load volatile double, double* @acos_0_5, align 8
  %20 = fdiv double %18, %19
  %21 = fmul double %20, 6.000000e+01
  %22 = fsub double 9.000000e+01, %21
  store double %22, double* %2, align 8
  br label %23

23:                                               ; preds = %15, %8
  %24 = load double, double* %2, align 8
  ret double %24
}

; Function Attrs: nounwind
declare dso_local double @asin(double) #1

; Function Attrs: nounwind
declare dso_local double @acos(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
